            SoundInterface.h
                added LoadIndicatorSounds()
                added m_indicatorSounds vector
                added SetInterventionVolume()
                added GetInterventionVolume()
                added InterventionVolume member
                added Clamp() helper function
        userinterface/
            legacymenu/
                CMakeList.txt
                  added    ResearcherMenu.h and .cpp
                  added    DataSelectionMenu.h and .cpp
                  added    backend in both ADD_SDLIB_LIBRARY and ADD_SDLIB_INCLUDEDIR
                legacymenu.h
                    ActivateResearcherMenu()
                legacymenu.cpp
                    included "ResearcherMenu.h"
                    included "DataSelectionMenu.h"
                    added    ActivateResearcherMenu()
                    changed  backLoad()
                    changed  activate()
                    removed player, graph, opengl, advanced graph, simu, ai, hostsettings configs
            mainscreens/
                mainmenu.cpp
                    included "DataSelectionMenu.h"
                    removed  <playerconfig.h>
                    added    GoBack()
                    changed  MainMenuInit()
                    changed  onplayerconfigMenuActivate(): renamed it to onControlMenuActivate()
                    changed  MainMenuInit()
                optionsmenu.cpp
                    removed graphics, advanced graphics, opengl, simulation, ai opponents menu
            racescreens/
                racestopmenu.cpp
                    RmStopRaceMenu()
                    changed  AssistedHuman is a human
                    removed rmProgressiveTimeModifier.start() call
                    removed controls menu
                racerunningmenus.cpp
                    removed RmProgressiveTimeModifier implementation and calls
                racemanmenu.cpp
                    included <controlconfig.h> and "mainmenu.h"